traefik/10-traefik-ds.yaml
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 8080
      name: admin
    - protocol: TCP
      port: 443
      name: ssl
---
kind: DaemonSet
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:1.7.1
        name: traefik-ingress-lb
        resources:
          limits:
            cpu: 4000m
            memory: 4Gi
          requests:
            cpu: 4000m
            memory: 4Gi
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: admin
          containerPort: 8080
          hostPort: 8080
        - name: ssl
          containerPort: 443
          hostPort: 443
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
        - --api
        - --kubernetes
        - --logLevel=INFO
        - --accesslog
        - --accesslog.filepath=/opt/traefik/log/traefik_access.log
        - --accessLog.format="json"
        - --traefiklog
        - --traefiklog.filepath=/opt/traefik/log/traefik.log
        - --traefikLog.format="json"
        - --traefiklogsfile=traefik.log
        - --configFile=/opt/traefik/conf/traefik.toml
        volumeMounts:
        - mountPath: "/opt/traefik/"
          name: traefik-data
      volumes:
      - name: traefik-data
        persistentVolumeClaim:
          claimName: traefik-data
